Adding Portions license Fixing lint issues